fix: meta name=description i.s.o. meta property=description

--- a/layouts/partials/hugo-seo/private/tags/meta.html
+++ b/layouts/partials/hugo-seo/private/tags/meta.html
@@ -4,7 +4,7 @@
 {{ $s.Add "meta" (dict "property" "canonical" "content" .canonical) }}
 
 {{ with .description }}
-{{ $s.Add "meta" (dict "property" "description" "content" . ) }}
+{{ $s.Add "meta" (dict "name" "description" "content" . ) }}
 {{ end }}
 
 {{ with .next }}
