feat: add schemas for rich results

--- a/layouts/partials/seo/_all.html
+++ b/layouts/partials/seo/_all.html
@@ -8,3 +8,4 @@
 {{- partial "seo/favicons" . }}
 {{- partial "seo/opengraph" . }}
 {{- partial "seo/twitter" . }}
+{{- partial "seo/schemas/_all" . }}
