--- a/layouts/partials/seo/canonical.html
+++ b/layouts/partials/seo/canonical.html
@@ -1,5 +1,5 @@
 {{- with .Params.seo.canonical }}
-  <link rel="canonical" href="{{ . }}" itemprop="url">
+  <link rel="canonical" href="{{ . }}">
 {{- else }}
-  <link rel="canonical" href="{{ .Permalink }}" itemprop="url">
+  <link rel="canonical" href="{{ .Permalink }}">
 {{- end }}
