--- a/layouts/partials/seo/schemas/product.html
+++ b/layouts/partials/seo/schemas/product.html
@@ -42,7 +42,7 @@
       "offers": {
         "@type": "Offer",
         "url": {{ .Permalink }},
-        "priceCurrency": "{{ $c }}"
+        "priceCurrency": "{{ $c }}",
         "price": "{{ $p }}",
         "availability": {{ $a }}
       }
