--- a/layouts/partials/seo/title.html
+++ b/layouts/partials/seo/title.html
@@ -1,5 +1,7 @@
-{{- .Scratch.Set "title" (printf "%s%s%s" .Title .Site.Params.seo.title.separator (.Site.Params.seo.title.suffix | default .Site.Title)) }}
-{{- if .Page.Params.seo.title }}
-  {{ .Scratch.Set "title" .Page.Params.seo.title }}
+{{- $title := "" }}
+{{- if .Params.seo.title }}
+	{{- $title = .Params.seo.title }}
+{{- else }}
+  {{- $title = printf "%s%s%s%s%s" .Title " " (.Site.Params.seo.title.separator | default "|") " " (.Site.Params.seo.title.suffix | default .Site.Title)}}
 {{- end }}
-<title>{{ .Scratch.Get "title" | truncate site.Params.seo.title.maxLength }}</title>
+<title>{{ $title }}</title>
