--- a/layouts/partials/seo/favicons.html
+++ b/layouts/partials/seo/favicons.html
@@ -1,65 +1,68 @@
 {{- $sizes := slice
-    (dict "size" "16x16")
-    (dict "size" "32x32")
-    (dict "size" "150x150")
-    (dict "size" "180x180" "rel" "apple-touch-icon")
-    (dict "size" "192x192")
-    (dict "size" "512x512")
+  (dict "size" "180x180" "rel" "apple-touch-icon")
+  (dict "size" "192x192")
+  (dict "size" "512x512")
 }}
-{{- with .Site.Params.seo.favicons.sizes }}
-    {{- $sizes = . }}
-{{- end }}
-
 {{/* Favicon generator */}}
 {{- $faviconName := default "favicon.png" .Site.Params.seo.favicons.icon }}
+{{- $svgIconName := default "favicon.svg" .Site.Params.seo.favicons.svgIcon }}
 {{- $favicon := resources.Get $faviconName }}
+{{- $svgIco := resources.Get $svgIconName }}
 {{- with $favicon }}
-    {{- if ne .MediaType.MainType "image" }}
-        {{- warnf "[Hugo SEO] the assets/%s isn't an image, media type: %s." $faviconName .MediaType.Type }}
-    {{- else if in (slice "svg") .MediaType.SubType }}
-        {{- warnf "[Hugo SEO] the assets/%s isn't resizable." $faviconName }}
-    {{- else }}
-        {{- range $sizes }}
-        {{- $iconName := printf "/favicon-%s" .size }}
-        {{- with .rel }}{{ $iconName = . }}{{ end }}
-        {{- $img := $favicon.Resize .size | resources.Copy (printf "%s%s" $iconName (path.Ext $favicon.Name) | relURL)  }}
-        <link
-            rel="{{ default `icon` .rel }}"
-            href="{{ $img.RelPermalink }}"
-            sizes="{{ .size }}"
-            type="{{ $img.MediaType }}"
-        >
+  {{- if ne .MediaType.MainType "image" }}
+    {{- warnf "[Hyas SEO] the assets/%s isn't an image, media type: %s." $faviconName .MediaType.Type }}
+  {{- else if in (slice "svg") .MediaType.SubType }}
+    {{- warnf "[Hyas SEO] the assets/%s isn't resizable." $faviconName }}
+  {{- else }}
+    {{/* favicon.ico */}}
+    {{- $ico := $favicon.Resize "32x32" }}
+    {{- $ico = $ico.Content | resources.FromString "/favicon.ico" }}
+    <link rel="icon" href="{{ $ico.RelPermalink }}" sizes="32x32">
+    {{/* SVG favicon */}}
+    {{- with $svgIco }}
+      {{- $svg := . | resources.Copy ("/favicon.svg" | relURL) }}
+      <link rel="icon" href="{{ $svg.RelPermalink }}" {{ .MediaType.Type | printf "type=%q" | safeHTMLAttr }}>
     {{- end }}
-{{- end }}
+    {{/* other favicons */}}
+    {{- range $sizes}}
+      {{- $iconName := printf "/favicon-%s" .size }}
+      {{- with .rel }}{{ $iconName = . }}{{ end }}
+      {{- $img := $favicon.Resize .size | resources.Copy (printf "%s%s" $iconName (path.Ext $favicon.Name) | relURL)  }}
+      <link
+        rel="{{ default `icon` .rel }}"
+        href="{{ $img.RelPermalink }}"
+        sizes="{{ .size }}"
+        type="{{ $img.MediaType }}"
+      >
+    {{- end }}
+  {{- end }}
 {{- else }}
-    {{- warnf "[Hugo SEO] assets/%s does not exist. Add a file that's at least 512x512 pixels (or your largest defined icon size)" $faviconName }}
+    {{- warnf "[Hyas SEO] assets/%s does not exist. Add a file that's at least 512x512 pixels." $faviconName }}
 {{- end }}
 
-{{/* SVG favicon - supported in all modern browsers. */}}
-{{- with resources.Get (default "favicon.svg" .Site.Params.seo.favicons.svgIcon) }}
-{{- $svg := . | resources.Copy ("/favicon.svg" | relURL) }}
-<link rel="icon" href="{{ $svg.RelPermalink }}">
-{{- end }}
-
-{{/* Creating Pinned Tab Icons */}}
-{{/* see https://developer.apple.com/library/archive/documentation/AppleApplications/Reference/SafariWebContent/pinnedTabs/pinnedTabs.html */}}
-{{- $maskIcon := default "mask-icon.svg" .Site.Params.seo.favicons.maskIcon }}
-{{- with resources.Get $maskIcon }}
-{{- $mask := . | resources.Copy ("/mask-icon.svg" | relURL) }}
-<link
-    rel="mask-icon"
-    href="{{ $mask.RelPermalink }}"
-    color="{{ default `white` $.Site.Params.seo.favicons.maskIconColor }}"
->
-{{- else }}
-{{- warnf "[Hugo SEO] assets/%s does not exist." $maskIcon }}
-{{- end }}
-
-{{/* Adding a favicon.ico for legacy browsers */}}
-{{- $ico := resources.Get "favicon.ico" }}
-{{/* Output nothing to publish the resource. */}}
-{{- if and (not (os.FileExists "static/favicon.ico")) $ico }}
-{{- if eq $ico.RelPermalink "" }}{{ end }}
-{{- else }}
-{{- warnf "[Hugo SEO] assets/favicon.ico does not exist." }}
-{{- end }}
+{{- $templ := `
+{
+  "name": "{{ site.Title }}",
+  "short_name": "{{ site.Title }}",
+  "lang": "{{ site.LanguageCode | default "en-us" }}",
+  "icons": [
+    {
+      "src": "/favicon-192x192.png",
+      "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "/favicon-512x512.png",
+      "sizes": "512x512",
+      "type": "image/png"
+    }
+  ],
+  "theme_color": "#ffffff",
+  "background_color": "#ffffff",
+  "display": "standalone",
+  "start_url": "{{ site.Home.RelPermalink }}"
+}
+` }}
+{{- $targetPath := "/manifest.webmanifest" }}
+{{- $res := $templ | resources.FromString $targetPath | resources.ExecuteAsTemplate $targetPath . }}
+<link rel="manifest" href="{{ $res.RelPermalink }}">
