--- a/layouts/partials/seo/robots.html
+++ b/layouts/partials/seo/robots.html
@@ -1,3 +1,3 @@
-{{- if .Params.seo.noindex }}
-  <meta name="robots" content="noindex,nofollow">
+{{- with .Params.seo.robots }}
+  <meta name="robots" content="{{ . }}">
 {{- end }}
