fix: omit breadcrumb for blank sections
When a section has no _index.md and/or section is not rendered
(e.g. footer section which is not displayed, just
collects footer components)
an incorrect breadcrumb schema is generated.
Prevent that by omitting blank sections from the breadcrumb trail.

Signed-off-by: Daniel F. Dickinson <dfdpublic@wildtechgarden.ca>

--- a/layouts/_partials/seo/schemas/breadcrumb.html
+++ b/layouts/_partials/seo/schemas/breadcrumb.html
@@ -6,19 +6,21 @@
   {{- $scratchCtx := .scratch -}}
   {{- with .parent }}
     {{ partial "inline/breadcrumbData" (dict "scratch" $scratchCtx "parent" .Parent) }}
-    {{- $scratchCtx.Add "listItem" (slice (dict 
-      "@type" "ListItem"
-      "position" ($scratchCtx.Get "count")
-      "name" (.Title | humanize | title)
-      "item" .Permalink
-    )) -}}
-    {{- $scratchCtx.Add "count" 1 -}}
+    {{- if and .Permalink (ne .Permalink "") }}
+      {{- $scratchCtx.Add "listItem" (slice (dict
+        "@type" "ListItem"
+        "position" ($scratchCtx.Get "count")
+        "name" (.Title | humanize | title)
+        "item" .Permalink
+      )) -}}
+      {{- $scratchCtx.Add "count" 1 -}}
+    {{- end }}
   {{- end }}
 {{- end -}}
 
 {{ partial "inline/breadcrumbData" (dict "scratch" $scratch "parent" .Parent) }}
 
-{{- $scratch.Add "listItem" (slice (dict 
+{{- $scratch.Add "listItem" (slice (dict
   "@type" "ListItem"
   "position" ($scratch.Get "count")
   "name" (.Title | humanize | title)
