--- a/layouts/_partials/seo/schemas/breadcrumb.html
+++ b/layouts/_partials/seo/schemas/breadcrumb.html
@@ -6,7 +6,7 @@
   {{- $scratchCtx := .scratch -}}
   {{- with .parent }}
     {{ partial "inline/breadcrumbData" (dict "scratch" $scratchCtx "parent" .Parent) }}
-    {{- if and .Permalink (ne .Permalink "") }}
+    {{- if .Permalink }}
       {{- $scratchCtx.Add "listItem" (slice (dict
         "@type" "ListItem"
         "position" ($scratchCtx.Get "count")
