--- a/layouts/_partials/seo/description.html
+++ b/layouts/_partials/seo/description.html
@@ -1,7 +1,7 @@
 {{- $curPage := .Page -}}
 
 {{- /* Error level when description not in recommended length: ignore, warning, or error. */ -}}
-{{- $errorLevel := or site.Params.seo.description.length.errorLevel "warning" | lower -}}
+{{- $errorLevel := (or site.Params.seo.description.length.errorLevel "warning") | lower -}}
 
 {{- /* ignore description length for specified pages */ -}}
 {{- range site.Params.seo.description.lengthIgnores }}
