fix: add missing condition in if statement
Signed-off-by: Daniel F. Dickinson <dfdpublic@wildtechgarden.ca>

--- a/layouts/_partials/seo/description.html
+++ b/layouts/_partials/seo/description.html
@@ -46,7 +46,7 @@
 	{{- if ne $lengthMessage "" }}
 		{{- if eq $errorLevel "warning" }}
 			{{- warnf $lengthMessage }}
-		{{ -else if $errorLevel "error" }}
+		{{- else if eq $errorLevel "error" }}
 			{{- errorf $lengthMessage }}
 		{{- end }}
 	{{- end }}
